# BrightsTraining

./: project.txt
Exams/: README.md
Exams/exam-1/: CMakeLists.txt  main.cpp
Exams/exam-1/doctests/: make_tests.cpp
Exams/exam-1/transactions/: CMakeLists.txt  finance_tracker.cpp  finance_tracker.h
Exams/exam-2/: main.cpp
Exams/exam-2/source/: exam.cpp  exam.h
PreStudies/: README.md
PreStudies/week_1/: ex_1.1.cpp  ex_1.2.cpp  ex_1.3.cpp  ex_1.4.cpp
PreStudies/week_2/ex_2.1-2.2/: constants.h  ex_2.1-2.2.cpp
PreStudies/week_2/ex_2.3/: ex_2.3.cpp
PreStudies/week_2/ex_2.4/: constants.h  ex_2.4.cpp
PreStudies/week_2/ex_2.5/: ex_2.5.cpp
PreStudies/week_2/ex_2.6/: ex_2.6.cpp
PreStudies/week_2/ex_2.7/: ex_2.7.cpp
PreStudies/week_3/integer_list/: integer_list.cpp
Studies/: README.md
Studies/doodling/: func_template.cpp  struct.cpp
Studies/doodling/circular_refrence/: main.cpp
Studies/doodling/random_between/: main.cpp
Studies/doodling/read_numbers_txt/: main.cpp  numbers.txt
Studies/doodling/remote_namespace/: cppfile.cpp  header.h  main.cpp
Studies/doodling/remote_struct/: cppfile.cpp  (+2 more)
Studies/week_1/: README.md
Studies/week_10/: README.md
Studies/week_2/: README.md
Studies/week_2/ex-2-2-1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  restorant
Studies/week_2/ex-2-2-1/src/: utils.cpp  utils.h
Studies/week_2/ex-2-4-1/: CMakeLists.txt  main.cpp  myfile.txt
Studies/week_3/: README.md
Studies/week_6/: README.md
Studies/week_7/: README.md
Studies/week_8/: README.md
Studies/week_9/: README.md
(+175 files in other folders)
